project(SU2_common CXX)

include(${CMAKE_SOURCE_DIR}/cmake/functions.cmake)

set(SOURCES
include/datatypes/codi_forward_structure.hpp
include/datatypes/codi_forward_structure.inl
include/datatypes/codi_reverse_structure.hpp
include/datatypes/codi_reverse_structure.inl
include/datatypes/primitive_structure.hpp
include/datatypes/primitive_structure.inl
include/geometry/dual_grid/CDualGrid.hpp
include/geometry/dual_grid/CEdge.hpp
include/geometry/dual_grid/CPoint.hpp
include/geometry/dual_grid/CTurboVertex.hpp
include/geometry/dual_grid/CVertex.hpp
include/geometry/elements/CElement.hpp
include/geometry/elements/CElementProperty.hpp
include/geometry/elements/CGaussVariable.hpp
include/geometry/meshreader/CBoxMeshReaderFVM.hpp
include/geometry/meshreader/CCGNSMeshReaderFVM.hpp
include/geometry/meshreader/CMeshReaderFVM.hpp
include/geometry/meshreader/CRectangularMeshReaderFVM.hpp
include/geometry/meshreader/CSU2ASCIIMeshReaderFVM.hpp
include/geometry/primal_grid/CHexahedron.hpp
include/geometry/primal_grid/CLine.hpp
include/geometry/primal_grid/CPrimalGrid.hpp
include/geometry/primal_grid/CPrimalGridBoundFEM.hpp
include/geometry/primal_grid/CPrimalGridFEM.hpp
include/geometry/primal_grid/CPrism.hpp
include/geometry/primal_grid/CPyramid.hpp
include/geometry/primal_grid/CQuadrilateral.hpp
include/geometry/primal_grid/CTetrahedron.hpp
include/geometry/primal_grid/CTriangle.hpp
include/geometry/primal_grid/CVertexMPI.hpp
include/geometry/CDummyGeometry.hpp
include/geometry/CGeometry.hpp
include/geometry/CMultiGridGeometry.hpp
include/geometry/CPhysicalGeometry.hpp
include/interface_interpolation/CInterpolator.hpp
include/interface_interpolation/CInterpolatorFactory.hpp
include/interface_interpolation/CIsoparametric.hpp
include/interface_interpolation/CMirror.hpp
include/interface_interpolation/CNearestNeighbor.hpp
include/interface_interpolation/CRadialBasisFunction.hpp
include/interface_interpolation/CSlidingMesh.hpp
include/linear_algebra/CMatrixVectorProduct.hpp
include/linear_algebra/CPastixWrapper.hpp
include/linear_algebra/CPreconditioner.hpp
include/linear_algebra/CSysMatrix.hpp
include/linear_algebra/CSysMatrix.inl
include/linear_algebra/CSysSolve.hpp
include/linear_algebra/CSysSolve_b.hpp
include/linear_algebra/CSysVector.hpp
include/toolboxes/MMS/CIncTGVSolution.hpp
include/toolboxes/MMS/CInviscidVortexSolution.hpp
include/toolboxes/MMS/CMMSIncEulerSolution.hpp
include/toolboxes/MMS/CMMSIncNSSolution.hpp
include/toolboxes/MMS/CMMSNSTwoHalfCirclesSolution.hpp
include/toolboxes/MMS/CMMSNSTwoHalfSpheresSolution.hpp
include/toolboxes/MMS/CMMSNSUnitQuadSolution.hpp
include/toolboxes/MMS/CMMSNSUnitQuadSolutionWallBC.hpp
include/toolboxes/MMS/CNSUnitQuadSolution.hpp
include/toolboxes/MMS/CRinglebSolution.hpp
include/toolboxes/MMS/CTGVSolution.hpp
include/toolboxes/MMS/CUserDefinedSolution.hpp
include/toolboxes/MMS/CVerificationSolution.hpp
include/toolboxes/allocation_toolbox.hpp
include/toolboxes/C1DInterpolation.hpp
include/toolboxes/C2DContainer.hpp
include/toolboxes/CLinearPartitioner.hpp
include/toolboxes/CSymmetricMatrix.hpp
include/toolboxes/CVertexMap.hpp
include/toolboxes/geometry_toolbox.hpp
include/toolboxes/graph_toolbox.hpp
include/toolboxes/printing_toolbox.hpp
include/ad_structure.hpp
include/ad_structure.inl
include/adt_structure.hpp
include/adt_structure.inl
include/blas_structure.hpp
include/CConfig.hpp
include/CMultiGridQueue.hpp
include/datatype_structure.hpp
include/datatype_structure.inl
include/fem_cgns_elements.hpp
include/fem_gauss_jacobi_quadrature.hpp
include/fem_gauss_jacobi_quadrature.inl
include/fem_geometry_structure.hpp
include/fem_geometry_structure.inl
include/fem_standard_element.hpp
include/fem_standard_element.inl
include/geometry_structure_fem_part.hpp
include/graph_coloring_structure.hpp
include/grid_adaptation_structure.hpp
include/grid_adaptation_structure.inl
include/grid_movement_structure.hpp
include/grid_movement_structure.inl
include/mpi_structure.hpp
include/mpi_structure.inl
include/omp_structure.hpp
include/option_structure.hpp
include/option_structure.inl
include/wall_model.hpp
include/wall_model.inl
lib/Makefile.am
src/geometry/dual_grid/CDualGrid.cpp
src/geometry/dual_grid/CEdge.cpp
src/geometry/dual_grid/CPoint.cpp
src/geometry/dual_grid/CTurboVertex.cpp
src/geometry/dual_grid/CVertex.cpp
src/geometry/dual_grid/meson.build
src/geometry/elements/CElement.cpp
src/geometry/elements/CHEXA8.cpp
src/geometry/elements/CPRISM6.cpp
src/geometry/elements/CPYRAM5.cpp
src/geometry/elements/CQUAD4.cpp
src/geometry/elements/CTETRA1.cpp
src/geometry/elements/CTRIA1.cpp
src/geometry/elements/meson.build
src/geometry/meshreader/CBoxMeshReaderFVM.cpp
src/geometry/meshreader/CCGNSMeshReaderFVM.cpp
src/geometry/meshreader/CMeshReaderFVM.cpp
src/geometry/meshreader/CRectangularMeshReaderFVM.cpp
src/geometry/meshreader/CSU2ASCIIMeshReaderFVM.cpp
src/geometry/meshreader/meson.build
src/geometry/primal_grid/CHexahedron.cpp
src/geometry/primal_grid/CLine.cpp
src/geometry/primal_grid/CPrimalGrid.cpp
src/geometry/primal_grid/CPrimalGridBoundFEM.cpp
src/geometry/primal_grid/CPrimalGridFEM.cpp
src/geometry/primal_grid/CPrism.cpp
src/geometry/primal_grid/CPyramid.cpp
src/geometry/primal_grid/CQuadrilateral.cpp
src/geometry/primal_grid/CTetrahedron.cpp
src/geometry/primal_grid/CTriangle.cpp
src/geometry/primal_grid/CVertexMPI.cpp
src/geometry/primal_grid/meson.build
src/geometry/CDummyGeometry.cpp
src/geometry/CGeometry.cpp
src/geometry/CMultiGridGeometry.cpp
src/geometry/CPhysicalGeometry.cpp
src/geometry/meson.build
src/interface_interpolation/CInterpolator.cpp
src/interface_interpolation/CInterpolatorFactory.cpp
src/interface_interpolation/CIsoparametric.cpp
src/interface_interpolation/CMirror.cpp
src/interface_interpolation/CNearestNeighbor.cpp
src/interface_interpolation/CRadialBasisFunction.cpp
src/interface_interpolation/CSlidingMesh.cpp
src/interface_interpolation/meson.build
src/linear_algebra/CPastixWrapper.cpp
src/linear_algebra/CSysMatrix.cpp
src/linear_algebra/CSysSolve.cpp
src/linear_algebra/CSysSolve_b.cpp
src/linear_algebra/CSysVector.cpp
src/linear_algebra/meson.build
src/toolboxes/MMS/CreateMMSSourceTerms/CMMSIncEulerSolution.py
src/toolboxes/MMS/CreateMMSSourceTerms/CMMSIncNSSolution.py
src/toolboxes/MMS/CreateMMSSourceTerms/CMMSNSTwoHalfCirclesSolution.mw
src/toolboxes/MMS/CreateMMSSourceTerms/CMMSNSTwoHalfSpheresSolution.mw
src/toolboxes/MMS/CreateMMSSourceTerms/CMMSNSUnitQuadSolution.mw
src/toolboxes/MMS/CreateMMSSourceTerms/CMMSNSUnitQuadSolutionWallBC.mw
src/toolboxes/MMS/CIncTGVSolution.cpp
src/toolboxes/MMS/CInviscidVortexSolution.cpp
src/toolboxes/MMS/CMMSIncEulerSolution.cpp
src/toolboxes/MMS/CMMSIncNSSolution.cpp
src/toolboxes/MMS/CMMSNSTwoHalfCirclesSolution.cpp
src/toolboxes/MMS/CMMSNSTwoHalfSpheresSolution.cpp
src/toolboxes/MMS/CMMSNSUnitQuadSolution.cpp
src/toolboxes/MMS/CMMSNSUnitQuadSolutionWallBC.cpp
src/toolboxes/MMS/CNSUnitQuadSolution.cpp
src/toolboxes/MMS/CRinglebSolution.cpp
src/toolboxes/MMS/CTGVSolution.cpp
src/toolboxes/MMS/CUserDefinedSolution.cpp
src/toolboxes/MMS/CVerificationSolution.cpp
src/toolboxes/MMS/meson.build
src/toolboxes/C1DInterpolation.cpp
src/toolboxes/CLinearPartitioner.cpp
src/toolboxes/CSymmetricMatrix.cpp
src/toolboxes/meson.build
src/toolboxes/printing_toolbox.cpp
src/ad_structure.cpp
src/adt_structure.cpp
src/blas_structure.cpp
src/CConfig.cpp
src/CMultiGridQueue.cpp
src/fem_cgns_elements.cpp
src/fem_gauss_jacobi_quadrature.cpp
src/fem_geometry_structure.cpp
src/fem_integration_rules.cpp
src/fem_standard_element.cpp
src/fem_wall_distance.cpp
src/fem_work_estimate_metis.cpp
src/geometry_structure_fem_part.cpp
src/graph_coloring_structure.cpp
src/grid_adaptation_structure.cpp
src/grid_movement_structure.cpp
src/meson.build
src/mpi_structure.cpp
src/wall_model.cpp)


set(TARGET_NAME SU2)


add_library(${TARGET_NAME} STATIC ${SOURCES})
target_include_directories(${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)


su2_setup_target(${TARGET_NAME})


add_library(SU2::SU2 ALIAS ${TARGET_NAME})
